--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary-color: #6c63ff;
   --secondary-color: #f5f2fe;
+  --branding-color: #6c63ff
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -96,4 +97,28 @@ p {
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
   color: white;
+}
+.about-section-content{
+  margin: 30px;
+}
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section h2 {
+  font-size: 18px;
+}
+.about-section p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  background: transparent;
+}
+.btn-branding {
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
 }
