--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
   --branding-color: #6c63ff;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
-
+@import url(/fonts/Montserrat/README.txt);
 body {
   margin: 100px 0;
 }
-
+.navbar-brand img {
+  max-width: 80px;
+  margin-right: 30px;
+  height: auto;
+}
 h1,
 h2,
 h3 {
@@ -18,10 +22,12 @@ h3 {
 
 h1 {
   font-size: 96px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h2 {
   font-size: 48px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h3 {
@@ -30,16 +36,17 @@ h3 {
 }
 
 p {
-  padding: 20px;
+  padding: 10px;
   border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 80px 20px;
 }
 
 .hero p {
@@ -47,12 +54,19 @@ p {
   font-weight: bold;
   margin: 0;
   color: #272142;
+  font-family: 'Montserrat', sans-serif;
+}
+.hero h1{
+  font-size: 54px;
+  line-height: 1.5;
+  font-weight: bold;
+  font-family: 'Kalnia', serif;
 }
 .hero h2 {
-  font-family: var(--heading-font-family);
   font-weight: normal;
   line-height: 2;
   font-size: 24px;
+  font-family: 'Montserrat', sans-serif;
 }
 .navigation-links {
   display: flex;
@@ -93,7 +107,14 @@ p {
 .about-paragraphs p {
   margin: 10px;
 }
-
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+.project-desciption{
+  padding: 0;
+  text-align: center;
+}
 .email-link {
   display: flex;
   justify-content: center;
@@ -114,34 +135,79 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
 }
-.about-section-content{
+.about-section{
   margin: 30px;
 }
 .about-section h1 {
-  font-size: 64px;
-  line-height: 80px;
+  font-size: 54px;
+  line-height: 1.5;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 .about-section h2 {
-  font-size: 18px;
+  font-weight: normal;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
 }
 .about-section p {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 30px;
   background: transparent;
+  font-family: 'Montserrat', sans-serif;
 }
-.btn-branding {
-  background: var(--branding-color);
-  border-radius: 4px;
+.about-section img{
+  border-radius: 10px;
+}
+.content {
+  text-align: center;
+  padding: 0;
+  margin-top: 26px;
+}
+.content h1{
+  font-size: 46px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+.content h3 {
+  font-size: 26px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+}
+.content .soon {
+  background: transparent;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+.content .soon:hover {
+  background: var(--primary-color);
   color: white;
-  font-size: 18px;
-  line-height: 27px;
-  padding: 15px 30px;
+}
+footer{
+  margin: 60px 120px;
 }
 footer .contact-box {
   background: var(--secondary-color);
   padding: 30px 120px;
   border-radius: 10px;
+}
+footer .contact-box h4 {
+  margin: 0;
+}
+footer .contact-box p {
+  margin: 0;
+  padding: 0;
+}
+
+footer .primary-link{
+  background: var(--branding-color);
+  border-radius: 4px;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;  
 }
 footer .email-link {
   text-decoration: none;
